:sparkles: Update theme

--- a/_config.yml
+++ b/_config.yml
@@ -3,12 +3,12 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
-subtitle: ''
-description: ''
-keywords:
-author: John Doe
-language: en
+title: 'Rust 和 WebAssembly 中文文档'
+subtitle: 'Rust With WebAssembly'
+description: 'Rust 和 WebAssembly 中文文档，中文翻译'
+keywords: Rust WebAssembly Wasm 中文文档，中文
+author: INS
+language: zh
 timezone: ''
 
 # URL
@@ -40,7 +40,7 @@ external_link:
   exclude: ''
 filename_case: 0
 render_drafts: false
-post_asset_folder: false
+post_asset_folder: true
 relative_link: false
 future: true
 highlight:
@@ -97,7 +97,7 @@ ignore:
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: landscape
+theme: custom-theme-1
 
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
